<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="282dp"
        android:layout_height="50dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:text="@string/subtl"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:gravity="center"
        android:text="@string/valx1"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/edtx1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="44dp"
        android:text="@string/valx2"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/edtx2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="45dp"
        android:text="@string/valy1"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/edty1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="45dp"
        android:text="@string/valy2"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/edty2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/edtx1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/digitev"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/edtx2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/digitev"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtx1" />

    <EditText
        android:id="@+id/edty1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/digitev"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtx2" />

    <EditText
        android:id="@+id/edty2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/digitev"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edty1" />

    <Button
        android:id="@+id/btnpendiente"
        android:layout_width="167dp"
        android:layout_height="45dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/pdnt"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btncuadrante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnpuntom" />

    <Button
        android:id="@+id/btnpuntom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="8dp"
        android:onClick="onClick"
        android:text="@string/p_m"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btnpendiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edty2" />

    <Button
        android:id="@+id/btncuadrante"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="112dp"
        android:onClick="onClick"
        android:text="@string/cuadr"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnpendiente" />
</androidx.constraintlayout.widget.ConstraintLayout>